# teacher-acorn_fastapi

./: README.md
ai-project-main/ai-project-main/: README.md
ai-project-main/ai-project-main/api/: main.py  readme.md
ai-project-main/ai-project-main/chapter13/: acquisition_model_10.onnx  acquisition_model_50.onnx  acquisition_model_90.onnx  main.py  player_acquisition_model.ipynb  player_training_data_full.csv  requirements.txt  schemas.py
ai-project-main/ai-project-main/chapter14/: README.md  langgraph_notebook.ipynb  langgraph_notebook_with_toolkit.ipynb  swc_toolkit.py
analytics-project-main/analytics-project-main/: README.md  dfsa
analytics-project-main/analytics-project-main/airflow/: readme.md
analytics-project-main/analytics-project-main/api/: main.py  readme.md
analytics-project-main/analytics-project-main/chapter10/: bulk_player_file_load_dag.py  readme.md
analytics-project-main/analytics-project-main/chapter11/: readme.md  requirements.txt
analytics-project-main/analytics-project-main/chapter9/: readme.md  requirements.txt
analytics-project-main/analytics-project-main/notebooks/: swc_simple_client.py
analytics-project-main/analytics-project-main/streamlit/: page2.py
portfolio-project-main/portfolio-project-main/: README.md
portfolio-project-main/portfolio-project-main/chapter7/: README.md  pyproject.toml
portfolio-project-main/portfolio-project-main/chapter7/sdk/: README.md
portfolio-project-main/portfolio-project-main/chapter7/sdk/src/swcpy/: swc_client.py  swc_config.py
(+20 files in other folders)
